# g_bmp

./: .gitignore  CMakeLists.txt  README.md
examples/g_bmp_grayscale/: CMakeLists.txt  main.c
examples/g_bmp_greenscale/: CMakeLists.txt  main.c
examples/g_bmp_redscale/: CMakeLists.txt  main.c
examples/g_bmp_salt_and_pepper/: CMakeLists.txt  main.c
src/: g_bmp.c  g_bmp.h
